# sentry2cc

./: .gitignore  README.md  pyproject.toml
examples/: custom_prompt.j2  my_rules.py  sentry2cc.yaml  wovar_prompt.j2  wovar_rules.py
src/sentry2cc/: __init__.py  agent.py  config.py  formatter.py  gdrive.py  models.py  prompt.py  protocols.py  runner.py  sentry_client.py
src/sentry2cc/templates/: default_prompt.j2
